<resources>
    <string name="app_name">WeCare</string>
    <string name="share">Share</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="splash_quote">The Comfort You Want &#8230; The Service You Need &#8230;</string>
    <string name="email">Email</string>
    <string name="invalid_email_password">Please provide a valid email and password.</string>
    <string name="version">"version"</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate Us</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="submit_order">Submit</string>
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="support_email" translatable="false">info@wecare-app.net</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">rrwYx0TljE39CLRnWyMvnMHZn</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">XFVWWsPe8Gp9qyHGBmsHy5IZzXsxu4mnQhFSB55Yu9DKFfggfa</string>
    <string name="facebook_app_id" translatable="false">2322989244401590</string>
    <string name="facebook_app_id_giver" translatable="false">2282385312072490</string>
    <string name="server_client_id_release" translatable="false">569598354322-ll1h6rbp7odkv7141hghc7ui899msi11.apps.googleusercontent.com</string>
    <string name="server_client_id_debug" translatable="false">569598354322-h03c3gbm90oc5781pfpnsf11oeb6qtkh.apps.googleusercontent.com</string>
    <string name="server_client_id" translatable="false">569598354322-t17d4ma4mku6uur590os01nil28l1cj0.apps.googleusercontent.com</string>
    <string name="server_client_id_2" translatable="false">569598354322-5uafpp1su8ijlare6r8qbt2malurslcr.apps.googleusercontent.com</string>
    <string name="server_client_id_3" translatable="false">569598354322-h03c3gbm90oc5781pfpnsf11oeb6qtkh.apps.googleusercontent.com </string>
    <string name="server_client_id_27_8" translatable="false">569598354322-ll1h6rbp7odkv7141hghc7ui899msi11.apps.googleusercontent.com</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2322989244401590</string>
    <string name="string_bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="map_api_key" translatable="false">AIzaSyCSla6lidR8xb29bv-Rt0WqBDWjWu1LPLU</string>
    <string name="numeric" translatable="false">1234567890</string>
    <string name="alphanumaric" translatable="false">qwertyuiopasdfghjklzxcvbnm1234567890</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="external_file_path" translatable="false">Android/data/com.wecare.android/</string>
    <string name="alphabets_english_digits" translatable="false">abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="set">Set</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="na">N/A</string>
    <string name="empty" translatable="false"> </string>
    <string name="slash" translatable="false">/</string>
    <string name="shot_name">Short Name</string>
    <string name="error_unexpected_error_occurred">Unexpected error has occurred</string>
    <string name="gps_access_denied">GPS service is denied</string>
    <string name="please_enable_location_services">Please enable location services</string>
    <string name="error_no_connection">The internet connection appears to be offline</string>
    <string name="succes_message_photo">Transaction has been saved to photo library</string>
    <string name="short_name_disclaimer">For short name use only english letters</string>
    <string name="error_message_no_internet">No Network</string>
    <string name="error_message_network">Network error</string>
    <string name="error_message_call">Call failed</string>
    <string name="error_message_map">Map loading failed</string>
    <string name="error_gps_is_off">To show the correct nearest bank location, You need to turn on GPS from settings, Do you want to turn it on?</string>
    <string name="error">Error</string>
    <string name="general_Error">General Error</string>
    <string name="general_Error_Loading">Error Loading !</string>
    <string name="general_NO_INTERNET_CONNECTION">No Internet Connection</string>
    <string name="general_Server_Error">Server Error</string>
    <string name="general_save">Save</string>
    <string name="general_close">Close</string>
    <string name="general_OK">OK</string>
    <string name="general_Cancel">Cancel</string>
    <string name="general_no_contacts">No Contacts Found</string>
    <string name="general_to">to</string>
    <string name="general_Update">Update</string>
    <string name="general_Send">"Send "</string>
    <string name="general_Success">Success</string>
    <string name="general_Create">Create </string>
    <string name="general_search">Search</string>
    <string name="general_Creating">Creating</string>
    <string name="general_PleaseWait">Please Wait</string>
    <string name="general_Downloading">Downloading…</string>
    <string name="general_Uploading">Uploading…</string>
    <string name="general_Loading">Loading…</string>
    <string name="general_skip">Skip</string>
    <string name="general_required_field">Required Field</string>
    <string name="general_file_not_found">File not found, Please try another file.</string>
    <string name="general_delete">Delete </string>
    <string name="skip">Skip</string>
    <string name="error_invalid_password">Password must contain at least 6 characters</string>
    <string name="error_invalid_name">Name must contain at least 2 characters</string>
    <string name="error_permission_required">Application requires some permissions to be granted!</string>
    <string name="error_no_item_to_display">No items to display</string>
    <string name="logout">Logout</string>
    <string name="requestBeingProcessed">Request being processed&#8230;</string>
    <string name="requestInProgressCancel">Your Request is in progress, are you sure you want to cancel the request?</string>
    <string name="logout_confirmation">Do you want to logout?</string>
    <string name="logout_force">Please login again to continue.</string>
    <string name="network_or_server_issue">Please check your network and try again.</string>
    <string name="retry">Retry</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="login">Login</string>
    <string name="secure_login">Secure Login</string>
    <string name="error_login_wrong_credentials">Error: Invalid credentials</string>
    <string name="forgot_my_password">forget password</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="contact_us">Contact us</string>
    <string name="application">Application</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="reset">Reset</string>
    <string name="changepassword">Change Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmnewpassword">Confirm New Password</string>
    <string name="error_confirm_new_password">Please confirm your new password</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_old_password">Please enter current password correctly</string>
    <string name="error_wrong_confirm_password">Passwords don’t match, Please enter them again</string>
    <string name="success_password_changed">Your password has been changed successfully.</string>
    <string name="forgot_password_login">Forgot Password?</string>
    <string name="action_email">Send By Email</string>
    <string name="action_download">Download</string>
    <string name="action_print">Print</string>
    <string name="cancel">Cancel</string>
    <string name="please_find_attached_statement">Please find the attached statement</string>
    <string name="send">Send</string>
    <string name="self_registration">Self Registration</string>
    <string name="error_customer_number">Please enter customer number correctly</string>
    <string name="country_code">Code</string>
    <string name="error_country_code">Please enter country code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="street_address">Street Address</string>
    <string name="state_provice">State/Province</string>
    <string name="postal_code">Postal Code/Zip</string>
    <string name="error_mobile_number">Please enter mobile number correctly</string>
    <string name="nationality">Citizenship</string>
    <string name="citizenship">Citizenship (Optional)</string>
    <string name="error_nationlity">Please enter nationality</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="middle_name_optional">Middle Name(Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="birthe_date">Birth Date</string>
    <string name="username">Username</string>
    <string name="error_username">Please enter your username correctly</string>
    <string name="password">Password</string>
    <string name="password_6_characters">Password(minimum 6 characters)</string>
    <string name="error_password">please enter your password correctly</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="error_confirm_password">Please confirm password</string>
    <string name="i_accept">I accept</string>
    <string name="error_accept_tc">Please accept Terms and Conditions</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_email">Please enter your Email correctly</string>
    <string name="error_otp_code">Please enter 5 digit code</string>
    <string name="sign_in">Sign in</string>
    <string name="new_in_wecare">New in WeCare?</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="we">We</string>
    <string name="select">Select</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="insurance_company_name">Insurance Company</string>
    <string name="insurance_type">Insurance Type</string>
    <string name="issuer_name">Issuer Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="please_drag_map_to_your_address">Please drag map to your address..</string>
    <string name="are_you_satisfied_with_the_level_of_this_service">Are you satisfied with the level of this service</string>
    <string name="close">Close</string>
    <string name="rate">Rate</string>
    <string name="evaluation">Evaluation</string>
    <string name="done">Done</string>
</resources>