<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapLocationPickerActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.map.MapLocationPickerActivity" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/we"
        app:srcCompat="@drawable/ic_marker" />

    <TextView
        android:id="@+id/dragg_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/doneButton"
        android:background="#8c000000"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:visibility="gone"
        android:text="@string/please_drag_map_to_your_address"
        android:textColor="#ffffff"
        android:textSize="@dimen/font_large" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/done"
        android:textColor="#ffffff"
        android:textSize="@dimen/font_large" />


</RelativeLayout>
